order type id and order type differentiation corrected